--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-minimal
-title: Título do site
+title: Thiago Pastorelli Rodrigues
 description: Descrição do site
 logo: /figura/mapa_vento_usina.png
-
