--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 title: Thiago Pastorelli Rodrigues
 description: Descrição do site
 logo: /figura/mapa_vento_usina.png
+
+teste teste teste
