--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Thiago Pastorelli Rodrigues
 logo: /figura/mapa_vento_usina.png
-description: Descrição do site. Descrição do site. Descrição do site. Descrição do site
+description: Descrição do site Descrição do site Descrição do site Descrição do site
 Descrição do site     Descrição do site
 
 teste teste teste
