--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,4 @@
 theme: jekyll-theme-minimal
 title: Thiago Pastorelli Rodrigues
 logo: /figura/mapa_vento_usina.png
-description: Descrição do site Descrição do site 
-
-Descrição do site Descrição do site
-
-
-
-
-Descrição do site Descrição do site
+description: Descrição do site
