--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Thiago Pastorelli Rodrigues
-logo: /figura/foto.jpg
+logo: /figura/foto2.jpg
 description: Descrição do site
